# plextime-bot

./: .env.template  .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/setup-environment/: action.yml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
plextime_bot/: __init__.py  __main__.py  plextime_bot.py
plextime_bot/config/: constants.py
plextime_bot/services/: plextime_api_client.py  telegram_notificator.py
plextime_bot/utils/: aes_cipher.py  date_manager.py  logger.py
tests/: test_example.py
