[tool.poetry]
name = "plextime_bot"
version = "1.2.0"
description = "🤖⏰ Bot for automatic check-in and check-out on Plextime platform."
keywords = ["python3"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

authors = ["Borja Paz Rodríguez <borjapazr@gmail.com>"]
maintainers = ["Borja Paz Rodríguez <borjapazr@gmail.com>"]

include = ["README.md", "py.typed"]
readme = "README.md"
license = "MIT"

homepage = "https://github.com/inditex/plextime-bot"
repository = "https://github.com/inditex/plextime-bot"
documentation = "https://github.com/borjapazr/plextime-bot/blob/main/README.md"

packages = [{ include = "plextime_bot" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-dotenv = "^1.0.1"
coloredlogs = "^15.0.1"
requests = "^2.32.3"
dataclass-wizard = "^0.22.3"
schedule = "^1.2.2"
colorama = "^0.4.6"
pycryptodome = "^3.20.0"
art = "^6.2"
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
deptry = "^0.20.0"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
ruff = "^0.6.5"
black = "^24.8.0"
types-requests = "^2.32.0.20240914"
types-pyjwt = "^1.7.1"
commitizen = "^3.29.0"

[tool.poetry.scripts]
plextime_bot = "plextime_bot:start_plextime_bot"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ['tests']

[tool.black]
line-length = 120
target-version = ["py37"]
include = "\\.pyi?$"
preview = true

[tool.mypy]
files = ["plextime_bot"]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true
warn_redundant_casts = true
strict_optional = true

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
  "A",    # Builtins
  "ARG",  # Unused arguments
  "B",    # Bugbear
  "BLE",  # Blind except
  "C4",   # Comprehensions
  "C90",  # mccabe
  "COM",  # Commas
  "DTZ",  # Datetimes
  "ERA",  # Commented-out code
  "EXE",  # Executable
  "F401", # Unused imports
  "G",    # Logging format
  "I",    # Isort
  "ICN",  # Import conventions
  "INP",  # Disallow PEP-420 (Implicit namespace packages)
  "INT",  # gettext
  "ISC",  # Implicit str concat
  "N",    # PEP-8 Naming
  "NPY",  # Numpy
  "PGH",  # Pygrep hooks
  "PIE",  # Unnecessary code
  "PL",   # Pylint
  "PT",   # Pytest
  "PTH",  # Use Pathlib
  "PYI",  # Stub files
  "RET",  # Return
  "RUF",  # Ruff
  "RSE",  # Raise
  "S",    # Bandit
  "SIM",  # Code simplification
  "SLF",  # Private member access
  "T20",  # Print
  "TCH",  # Type checking
  "TID",  # Tidy imports
  "UP",   # Pyupgrade
  "W",    # Warnings
  "YTT",  # sys.version
]
ignore = [
  "PLR0913", # Too many arguments
  "RUF009",  # Dataclass defaults
  "S311",    # Cryptographic
  "S324",    # Cryptographic
  "S608",    # SQL
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"tests/*" = ["ANN", "ARG", "INP001", "S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 20
max-returns = 10
max-statements = 80

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.deptry.per_rule_ignores]
DEP002 = ["pytz", "colorama"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.0"
version_files = ["pyproject.toml:version", "docker/Dockerfile:version"]
version_scheme = "pep440"
tag_format = "v$version"
annotated_tag = true
update_changelog_on_bump = true
bump_message = "bump: version $current_version → $new_version"
changelog_file = "CHANGELOG.md"
gpg_sign = true
always_signoff = true
